fixed absolute positioning (kind of) on mobile for github and email

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ h2 {
 .container {
   max-width: 1200px;
   margin: 0 auto;
+  position: relative;
 }
 
 .row {
@@ -82,6 +83,27 @@ h2 {
 @media (width <= 600px) {
   .row {
     grid-template-columns: 1fr;
-    gap: 3.5em;
+    gap: 2em;
+    margin: 2.5em 2em;
+  }
+
+  .project h3 {
+    font-size: 24px;
+  }
+
+  .project em {
+    font-size: 20px;
+  }
+
+  .author-email,
+  .author-github {
+    position: relative;
+    display: block;
+    bottom: 0;
+    left: 0;
+    margin: auto 0;
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 20px;
   }
 }
